[gd_scene load_steps=22 format=3 uid="uid://c1bf1ga70wtne"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_d43fc"]
[ext_resource type="Texture2D" uid="uid://15qlvtbi0qak" path="res://art/characters/slime.png" id="1_fldxp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lm4u3"]
atlas = ExtResource("1_fldxp")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clww7"]
atlas = ExtResource("1_fldxp")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeyob"]
atlas = ExtResource("1_fldxp")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb8wj"]
atlas = ExtResource("1_fldxp")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_invrc"]
atlas = ExtResource("1_fldxp")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmgdj"]
atlas = ExtResource("1_fldxp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3caht"]
atlas = ExtResource("1_fldxp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5hgn"]
atlas = ExtResource("1_fldxp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlry3"]
atlas = ExtResource("1_fldxp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oixfa"]
atlas = ExtResource("1_fldxp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2too"]
atlas = ExtResource("1_fldxp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyaxx"]
atlas = ExtResource("1_fldxp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrkkp"]
atlas = ExtResource("1_fldxp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xsi0"]
atlas = ExtResource("1_fldxp")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy7vi"]
atlas = ExtResource("1_fldxp")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pt1sw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm4u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clww7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeyob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb8wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_invrc")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmgdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3caht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5hgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlry3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oixfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2too")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyaxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrkkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xsi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy7vi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dn050"]
radius = 35.2278

[sub_resource type="CircleShape2D" id="CircleShape2D_e6aap"]
radius = 5.83095

[sub_resource type="CircleShape2D" id="CircleShape2D_kdcyw"]

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_d43fc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pt1sw")
animation = &"idle"
frame_progress = 0.793446
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/detection_area"]
position = Vector2(1, -4)
shape = SubResource("CircleShape2D_dn050")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_e6aap")

[node name="slime_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_hitbox"]
position = Vector2(0, -3)
scale = Vector2(1.36612, 1.36612)
shape = SubResource("CircleShape2D_kdcyw")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="HTTPRequest"]
offset_left = -19.0
offset_top = -44.0
offset_right = 21.0
offset_bottom = -21.0

[connection signal="body_entered" from="AnimatedSprite2D/detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="slime_hitbox" to="." method="_on_slime_hitbox_body_entered"]
[connection signal="body_exited" from="slime_hitbox" to="." method="_on_slime_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
